--- a/src/components/Intro/intro.scss
+++ b/src/components/Intro/intro.scss
@@ -1,81 +1,110 @@
-.intro{
-    background-color: #fff;
-    display: flex;
-    
-    .left{
-        flex: .5;
-        overflow: hidden;
-        .imageCotainer{
-            width: 700px;
-            height: 700px;
-            background-color: crimson;
-            border-radius: 50%;
-            display: flex;
-            align-items: flex-end;
-            justify-content: center;
-            float: right;
+@import "../../global.scss";
 
-            img{
-                height:90%;
-                
+.intro {
+  background-color: white;
+  display: flex;
 
-            }
+  @include mobile{
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .left {
+    flex: 0.5;
+    overflow: hidden;
+
+    .imgContainer {
+      width: 700px;
+      height: 700px;
+      background-color: crimson;
+      border-radius: 50%;
+      display: flex;
+      align-items: flex-end;
+      justify-content: center;
+      float: right;
+
+      @include mobile{
+        align-items: flex-start;
+      }
+
+      img {
+        height: 90%;
+
+        @include mobile{
+          height: 50%;
         }
-
+      }
     }
-    .right{
-        flex: 0.5;
-        position: relative;
+  }
+  .right {
+    flex: 0.5;
+    position: relative;
 
-        .wrapper{
-            width: 100%;
-            height: 100%;
-            padding: 50px;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
+    .wrapper {
+      width: 100%;
+      height: 100%;
+      padding-left: 50px;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
 
-            h1{
-                font-size: 60px;
-                margin: 10px 0;
-            }
-            h2{
-                font-size: 35px;
-            }
-            h3{
-                font-size: 20px;
-                span{
-                    font-size: inherit;
-                    color: crimson;
+      @include mobile{
+        padding-left: 0;
+        align-items: center;
+      }
 
-                    .ityped-cursor{
-                        animation: blink 1s infinite;
-                    }
-                    @keyframes blink {
-                        50%{
-                            opacity: 1;
-                        }
-                        100% {
-                            opacity:0
-                        };
-                    }
-                }
-            }
+      h1 {
+        font-size: 60px;
+        margin: 10px 0;
+
+        @include mobile{
+          font-size: 40px;
+        }
+      }
+      h2 {
+        font-size: 35px;
+      }
+      h3 {
+        font-size: 30px;
+
+        @include mobile{
+          font-size: 20px;
         }
 
-        a{
-            position: absolute;
-            bottom: 10px;
-            left: 40%;
-            img{
-                width: 30px;
-                animation: arrowBlink 2s infinite; //arrow animation
+        span {
+          font-size: inherit;
+          color: crimson;
+        }
+
+        .ityped-cursor {
+          animation: blink 1s infinite;
+        }
+
+        @keyframes blink {
+            50%{
+                opacity: 1;
             }
-            @keyframes arrowBlink{
-                100%{
-                    opacity: 0;//arrow animation
-                }
+            100%{
+                opacity: 0;
             }
         }
+      }
     }
+    a {
+      position: absolute;
+      bottom: 10px;
+      left: 40%;
+
+      img {
+        width: 30px;
+        animation: arrowBlink 2s infinite;
+      }
+
+      @keyframes arrowBlink {
+        100% {
+          opacity: 0;
+        }
+      }
+    }
+  }
 }
