--- a/src/components/PortfolioList/portfolioList.scss
+++ b/src/components/PortfolioList/portfolioList.scss
@@ -1,15 +1,18 @@
 @import "../../global.scss";
 
-li{
-    font-size: 14px;
-    margin-right: 50px;
-    padding: 7px;
-    border-radius: 10px;
-    cursor: pointer;
-    z-index: 5;
+.portfolioList {
+  font-size: 14px;
+  margin-right: 50px;
+  padding: 7px;
+  border-radius: 10px;
+  cursor: pointer;
 
-    &.active{
-        background-color: $mainColor;
-        color: #fff;
-    }
+  @include mobile{
+    margin-right: 20px;
+  }
+
+  &.active {
+    background-color: $mainColor;
+    color: white;
+  }
 }
